--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -9,69 +9,89 @@
     <ImageView
         android:id="@+id/newImage"
         android:layout_width="match_parent"
-        android:layout_height="215dp"
+        android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        android:src="@android:drawable/sym_def_app_icon" />
+        android:layout_margin="5dp" />
 
     <TextView
         android:id="@+id/nameView"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:text="Name :"
-        android:layout_marginTop="290dp"
-        android:layout_marginLeft="60dp"/>
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="250dp"
+        android:text="Name :" />
 
     <EditText
         android:id="@+id/editName"
-        android:layout_width="200dp"
+        android:layout_width="210dp"
         android:layout_height="40dp"
-        android:layout_marginTop="275dp"
-        android:layout_marginLeft="110dp"/>
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="250dp" />
+
+    <TextView
+        android:id="@+id/phoneNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="300dp"
+        android:text="Phone Number" />
+
+    <EditText
+        android:id="@+id/phoneNumberText"
+        android:layout_width="210dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="300dp"
+        android:ems="10"
+        android:inputType="phone" />
 
     <TextView
         android:id="@+id/emailView"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:text="Email :"
-        android:layout_marginTop="340dp"
-        android:layout_marginLeft="60dp"/>
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="350dp"
+        android:text="Email :" />
 
     <EditText
         android:id="@+id/editEmail"
-        android:layout_width="200dp"
+        android:layout_width="210dp"
         android:layout_height="40dp"
-        android:layout_marginTop="325dp"
-        android:layout_marginLeft="110dp"/>
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="350dp"
+        android:ems="10"
+        android:inputType="textEmailAddress" />
 
     <TextView
         android:id="@+id/addressView"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_marginTop="390dp"
-        android:layout_marginLeft="60dp"
-        android:text="Address :"/>
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="400dp"
+        android:text="Address :" />
 
     <EditText
         android:id="@+id/editAddress"
-        android:layout_width="200dp"
+        android:layout_width="210dp"
         android:layout_height="40dp"
-        android:layout_marginTop="375dp"
-        android:layout_marginLeft="120dp"/>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/chooseButton"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="200dp"
-        android:layout_centerHorizontal="true"
-        android:src="@android:drawable/ic_input_add" />
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="120dp"
+        android:layout_marginTop="400dp" />
 
     <Button
         android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="512dp"
-        android:text="Save" />
+        android:layout_margin="10dp"
+        android:background="@color/colorPrimaryDark"
+        android:text="Save"
+        android:textColor="@android:color/background_light" />
 
 </RelativeLayout>
