--- a/app/src/main/res/layout/fragment_login_fragment.xml
+++ b/app/src/main/res/layout/fragment_login_fragment.xml
@@ -1,88 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_centerHorizontal="true"
     android:background="@drawable/login_signup_gradient"
     tools:context=".Login_fragment">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginLeft="140dp"
-        android:layout_marginTop="123dp"
-        android:text="LOGIN"
-        android:textColor="@android:color/white"
-        android:textSize="25dp"
-        android:textStyle="bold" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginLeft="21dp"
-        android:layout_marginTop="202dp"
-        android:text="Email"
-        android:textColor="@android:color/white"
-        android:textSize="18dp" />
+        <RelativeLayout
+            android:id="@+id/loginRelativeLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerHorizontal="true">
 
-    <EditText
-        android:id="@+id/email_login"
-        android:layout_width="190dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="112dp"
-        android:layout_marginTop="202dp"
-        android:textColor="@android:color/white" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="140dp"
+                android:layout_marginTop="123dp"
+                android:text="LOGIN"
+                android:textColor="@android:color/white"
+                android:textSize="25dp"
+                android:textStyle="bold" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_marginLeft="21dp"
-        android:layout_marginTop="262dp"
-        android:text="Password"
-        android:textColor="@android:color/white"
-        android:textSize="18dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="21dp"
+                android:layout_marginTop="200dp"
+                android:text="Email"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
 
-    <EditText
-        android:id="@+id/password_login"
-        android:layout_width="190dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="112dp"
-        android:layout_marginTop="262dp"
-        android:inputType="textPassword"
-        android:textColor="@android:color/white" />
+            <EditText
+                android:id="@+id/email_login"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="120dp"
+                android:layout_marginTop="200dp"
+                android:ems="10"
+                android:inputType="textEmailAddress"
+                android:textColor="@android:color/background_light" />
 
-    <CheckBox
-        android:id="@+id/showPassword_login"
-        android:layout_width="140dp"
-        android:layout_height="40dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="35dp"
-        android:layout_marginStart="35dp"
-        android:layout_marginTop="310dp"
-        android:text="Show Password"
-        android:textColor="@android:color/white" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="21dp"
+                android:layout_marginTop="250dp"
+                android:text="Password"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="70dp"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="130dp"
-        android:background="@color/colorPrimary"
-        android:text="Login"
-        android:textColor="@android:color/white" />
+            <EditText
+                android:id="@+id/password_login"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="120dp"
+                android:layout_marginTop="250dp"
+                android:inputType="textPassword"
+                android:textColor="@android:color/white" />
 
-    <Button
-        android:id="@+id/newUser_button"
-        android:layout_width="wrap_content"
-        android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="66dp"
-        android:background="@android:color/transparent"
-        android:text="New user? Register here"
-        android:textColor="@android:color/white" />
+            <CheckBox
+                android:id="@+id/showPassword_login"
+                android:layout_width="140dp"
+                android:layout_height="40dp"
+                android:layout_alignParentBottom="false"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="21dp"
+                android:layout_marginTop="300dp"
+                android:text="Show Password"
+                android:textColor="@android:color/white" />
 
-</RelativeLayout>
+            <Button
+                android:id="@+id/login_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="false"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="400dp"
+                android:background="@color/colorPrimary"
+                android:text="Login"
+                android:textColor="@android:color/white" />
+
+            <Button
+                android:id="@+id/newUser_button"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_alignParentBottom="false"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="450dp"
+                android:background="@android:color/transparent"
+                android:text="New user? Register here"
+                android:textColor="@android:color/white" />
+
+        </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
