--- a/app/src/main/res/layout/fragment_signup_fragment.xml
+++ b/app/src/main/res/layout/fragment_signup_fragment.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_centerHorizontal="true"
     android:background="@drawable/login_signup_gradient"
     tools:context=".Signup_fragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 
     <TextView
         android:id="@+id/registerText"
@@ -22,78 +35,123 @@
         android:id="@+id/userNameText"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="21dp"
         android:layout_marginTop="110dp"
         android:text="@string/username"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/register_username"
-        android:layout_width="190dp"
+        android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="false"
-        android:layout_marginLeft="150dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="140dp"
         android:layout_marginTop="110dp"
         android:layout_toRightOf="@+id/userNameText"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:inputType="" />
 
     <TextView
         android:id="@+id/emailTextView"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="21dp"
         android:layout_marginTop="160dp"
         android:text="@string/e_mail"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/phoneno"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="21dp"
+        android:layout_marginTop="210dp"
+        android:text="Phone"
+        android:textColor="@android:color/background_light" />
+
+    <EditText
+        android:id="@+id/editText3"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="210dp"
+        android:ems="10"
+        android:inputType="phone" />
 
     <EditText
         android:id="@+id/register_email"
-        android:layout_width="190dp"
+        android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="150dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="140dp"
         android:layout_marginTop="160dp"
+        android:inputType="textEmailAddress"
         android:textColor="@android:color/white" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="21dp"
-        android:layout_marginTop="210dp"
+        android:layout_marginTop="260dp"
         android:text="@string/password"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/register_password"
-        android:layout_width="190dp"
+        android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="210dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="260dp"
         android:inputType="textPassword"
         android:textColor="@android:color/white" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="21dp"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="310dp"
         android:text="@string/re_type_password"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/register_reTypePassword"
-        android:layout_width="190dp"
+        android:layout_width="200dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="260dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="140dp"
+        android:layout_marginTop="310dp"
         android:inputType="textPassword"
         android:textColor="@android:color/white" />
 
     <TextView
         android:layout_width="300dp"
         android:layout_height="25dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="21dp"
-        android:layout_marginTop="310dp"
+        android:layout_marginTop="360dp"
         android:text="@string/password_should_be_atleast_of_6_characters"
         android:textColor="@android:color/white" />
 
@@ -101,11 +159,12 @@
         android:id="@+id/showPassword_register"
         android:layout_width="140dp"
         android:layout_height="40dp"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="false"
-        android:layout_marginStart="35dp"
+        android:layout_alignParentTop="true"
         android:layout_marginLeft="21dp"
-        android:layout_marginTop="335dp"
+        android:layout_marginTop="410dp"
         android:text="@string/show_password"
         android:textColor="@android:color/white" />
 
@@ -114,7 +173,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="21dp">
+        android:layout_marginLeft="21dp"
+        android:visibility="gone">
 
         <RadioButton
             android:id="@+id/travellerButton"
@@ -143,10 +203,12 @@
     <Button
         android:id="@+id/register_button"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentLeft="false"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="90dp"
+        android:layout_marginTop="460dp"
         android:background="@color/colorPrimary"
         android:text="REGISTER"
         android:textColor="@android:color/white" />
@@ -155,12 +217,18 @@
         android:id="@+id/alreadyUser_button"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:layout_alignParentBottom="true"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="45dp"
+        android:layout_marginTop="510dp"
         android:background="@android:color/transparent"
         android:text="Already a user? Login"
         android:textColor="@android:color/white"
         android:textColorLink="@android:color/background_light" />
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</LinearLayout>
+
+</ScrollView>
+
