--- a/app/src/main/res/layout/fragment_find_stay_.xml
+++ b/app/src/main/res/layout/fragment_find_stay_.xml
@@ -1,25 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <Button
-        android:id="@+id/search_button"
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="@drawable/search_button_bg"
-        android:fadingEdge="horizontal"
-        android:gravity="fill_vertical|start"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:text="@string/search_for_stay_here"
-        android:textAllCaps="false"
-        android:textColor="@android:color/darker_gray"
-        android:textSize="14sp" />
+        android:orientation="horizontal">
+
+        <SearchView
+            android:id="@+id/staySearchView"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_weight="1"
+            android:background="@drawable/search_button_bg"
+            android:queryHint="Search Stay by Location" />
+
+        <ImageView
+            android:id="@+id/filterOnStay"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            app:srcCompat="@drawable/baseline_filter_list_black_48dp" />
+
+    </LinearLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/stay_list"
