--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_centerHorizontal="true"
+
+    tools:context=".WelcomeFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
 
     <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".WelcomeFragment">
@@ -12,10 +22,12 @@
 
         <ImageView
             android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_alignParentTop="true"
             android:layout_margin="0dp"
             android:layout_weight="1"
+            android:baselineAlignBottom="true"
             android:paddingBottom="150dp"
             android:paddingLeft="60dp"
             android:paddingRight="60dp"
@@ -25,9 +37,9 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/textView3"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="150dp"
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="300dp"
             android:layout_weight="1"
             android:gravity="center_horizontal"
             android:padding="10dp"
@@ -40,9 +52,9 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/imageView3"
             android:layout_alignParentBottom="false"
-            android:layout_marginBottom="100dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="350dp"
             android:layout_weight="0"
             android:gravity="center_horizontal"
             android:padding="10dp"
@@ -51,3 +63,5 @@
             android:textSize="18sp" />
 
     </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
