--- a/app/src/main/res/layout/fragment_travel_item_detail.xml
+++ b/app/src/main/res/layout/fragment_travel_item_detail.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TravelItemDetailFragment">
@@ -10,12 +10,17 @@
 
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/cardView1"
+            android:id="@+id/Td_cardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp">
@@ -26,7 +31,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/stayName"
+                    android:id="@+id/Td_Host"
                     android:layout_width="141dp"
                     android:layout_height="36dp"
                     android:layout_alignParentStart="true"
@@ -40,7 +45,7 @@
                     tools:layout_editor_absoluteY="44dp" />
 
                 <TextView
-                    android:id="@+id/reviewText"
+                    android:id="@+id/Td_rating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_above="@+id/stayImage"
@@ -53,7 +58,7 @@
                     tools:layout_editor_absoluteY="125dp" />
 
                 <RatingBar
-                    android:id="@+id/stayRatingBar"
+                    android:id="@+id/Td_RatingBar"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignEnd="@+id/stayName"
@@ -64,7 +69,7 @@
                     tools:layout_editor_absoluteY="115dp" />
 
                 <ImageView
-                    android:id="@+id/stayImage"
+                    android:id="@+id/Td_hostpic"
                     android:layout_width="152dp"
                     android:layout_height="171dp"
                     android:layout_below="@+id/stayName"
@@ -75,7 +80,7 @@
                     tools:layout_editor_absoluteY="16dp" />
 
                 <TextView
-                    android:id="@+id/f1"
+                    android:id="@+id/Td_place"
                     android:layout_width="262dp"
                     android:layout_height="32dp"
                     android:layout_margin="5dp"
@@ -87,7 +92,7 @@
                     tools:layout_editor_absoluteY="204dp" />
 
                 <TextView
-                    android:id="@+id/f2"
+                    android:id="@+id/Td_details"
                     android:layout_width="315dp"
                     android:layout_height="63dp"
                     android:layout_margin="5dp"
@@ -99,7 +104,7 @@
                     tools:layout_editor_absoluteY="247dp" />
 
                 <ImageButton
-                    android:id="@+id/travel_button_interested"
+                    android:id="@+id/Td_button_interested"
                     android:layout_width="63dp"
                     android:layout_height="63dp"
                     android:layout_alignBottom="@+id/travel_button_willjoin"
@@ -111,7 +116,7 @@
                     tools:layout_editor_absoluteY="410dp" />
 
                 <ImageButton
-                    android:id="@+id/travel_button_willjoin"
+                    android:id="@+id/Td_button_willjoin"
                     android:layout_width="63dp"
                     android:layout_height="63dp"
                     android:layout_below="@+id/travel_details"
@@ -125,7 +130,7 @@
                     tools:layout_editor_absoluteY="410dp" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/Td_textView1"
                     android:layout_width="wrap_content"
                     android:layout_height="43dp"
                     android:text="Interested"
@@ -134,7 +139,7 @@
                     tools:layout_editor_absoluteY="491dp" />
 
                 <TextView
-                    android:id="@+id/textView7"
+                    android:id="@+id/Td_textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="43dp"
                     android:text="Will join"
@@ -143,23 +148,23 @@
                     tools:layout_editor_absoluteY="491dp" />
 
                 <TextView
-                    android:id="@+id/textView8"
+                    android:id="@+id/Td_going"
                     android:layout_width="58dp"
                     android:layout_height="40dp"
                     android:text="111"
                     android:textSize="24sp"
+                    tools:ignore="MissingConstraints"
                     tools:layout_editor_absoluteX="26dp"
-                    tools:layout_editor_absoluteY="332dp"
-                    tools:ignore="MissingConstraints" />
+                    tools:layout_editor_absoluteY="332dp" />
 
                 <TextView
-                    android:id="@+id/textView9"
+                    android:id="@+id/Td_textView3"
                     android:layout_width="125dp"
                     android:layout_height="22dp"
                     android:text="Already Going"
+                    tools:ignore="MissingConstraints"
                     tools:layout_editor_absoluteX="93dp"
-                    tools:layout_editor_absoluteY="341dp"
-                    tools:ignore="MissingConstraints" />
+                    tools:layout_editor_absoluteY="341dp" />
 
             </android.support.constraint.ConstraintLayout>
 
