--- a/app/src/main/res/layout/addstaydialog.xml
+++ b/app/src/main/res/layout/addstaydialog.xml
@@ -82,7 +82,8 @@
         android:id="@+id/editDate"
         android:layout_width="150dp"
         android:layout_height="45dp"
-        android:layout_marginTop="215dp"
+        android:textSize="15dp"
+        android:layout_marginTop="225dp"
         android:layout_marginLeft="180dp"/>
 
     <ImageButton
@@ -106,7 +107,7 @@
         android:id="@+id/editCity"
         android:layout_width="220dp"
         android:layout_height="45dp"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="275dp"
         android:layout_marginLeft="110dp"/>
 
     <TextView
@@ -158,5 +159,37 @@
         android:layout_marginTop="425dp"
         android:textSize="10dp"
         android:text="choose image"/>
+
+    <TextView
+        android:id="@+id/detailsView"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:textSize="17dp"
+        android:text="Details :"
+        android:layout_marginTop="475dp"
+        android:layout_marginLeft="70dp"/>
+
+    <EditText
+        android:id="@+id/editDetails"
+        android:layout_width="220dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="460dp"
+        android:layout_marginLeft="135dp"/>
+
+    <TextView
+        android:id="@+id/offersView"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:textSize="17dp"
+        android:text="Things to Offer :"
+        android:layout_marginTop="520dp"
+        android:layout_marginLeft="12dp"/>
+
+    <EditText
+        android:id="@+id/editOffers"
+        android:layout_width="220dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="510dp"
+        android:layout_marginLeft="135dp"/>
 
 </RelativeLayout>
